--- a/lobby.css
+++ b/lobby.css
@@ -25,6 +25,7 @@ header {
     text-shadow: 0 3px 6px rgba(0, 0, 0, 0.417);
     font-family: 'Roboto', sans-serif;
     box-shadow: 0 7px 15px rgba(0, 0, 0, 0.329);
+    cursor: pointer;
 }
 
 .btnIng {
@@ -35,6 +36,7 @@ header {
     text-shadow: 0 3px 6px rgba(0, 0, 0, 0.417);
     font-family: 'Roboto', sans-serif;
     box-shadow: 0 7px 15px rgba(0, 0, 0, 0.329);
+    cursor: pointer;
 }
 
 .btnMorado {
@@ -50,4 +52,21 @@ header {
 .btnMorado:active {
     background-color: burlywood;
     transition: 0s ease-in-out;
+}
+
+.contenido {
+    margin: 0 auto;
+    background-color: #A9F2DA;
+}
+
+section article {
+    transition: box-shadow 0.3s ease;
+    margin: 1rem 0;
+    border-radius: 0.5rem;
+    padding: 0.27rem 0;
+}
+
+section h2 {
+    text-align: center;
+    color: ;
 }
