--- a/lobby.css
+++ b/lobby.css
@@ -5,6 +5,7 @@ html {
 
 body {
     margin: 0px;
+    background-color: rgb(50, 137, 108);
 }
 
 header {
@@ -55,18 +56,67 @@ header {
 }
 
 .contenido {
+    width: 400px;
     margin: 0 auto;
-    background-color: #A9F2DA;
 }
 
 section article {
     transition: box-shadow 0.3s ease;
     margin: 1rem 0;
-    border-radius: 0.5rem;
+    border-radius: 1rem;
     padding: 0.27rem 0;
+    background-color: rgba(228, 227, 227, 0.824);
+    cursor: pointer;
+    text-align: center;
+}
+
+section article:hover {
+    box-shadow: 0 0.16rem 0.5rem rgba(0, 0, 0, 0.61);
 }
 
 section h2 {
     text-align: center;
-    color: ;
+    color: rgb(142, 60, 142);
+    font-family: 'Lato', sans-serif;
+    font-size: 35px;
+    text-shadow: 0 0.8px 4px rgba(0, 0, 0, 0.094);
+}
+
+section p {
+    color: rgb(192, 15, 236);
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+}
+
+section h2,
+section p {
+    margin: 1rem;
+}
+
+footer {
+    background-color: #283134;
+    padding: 2.5rem;
+    color: antiquewhite;
+}
+
+footer section {
+    float: left;
+}
+
+footer a {
+    font-size: 27px;
+    color: azure;
+    transition: color 0.6s ease;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: aqua;
+}
+
+footer h4 {
+    text-align: right;
+    font-size: 25px;
+    font-family: 'Lato', sans-serif;
+    margin: 0;
 }
